# sca

./: .gitignore  README.md  pyproject.toml
config/: composition_weights.yaml
demo/cs_core_resistor_load_cs_core_resistor_load_sf_core_429c614d/: circuit.cir  circuit.json  problem.json  problem.md  solution.json  solution.md  traces.jsonl
docs/: CLAUDE.md  design_notes.md  skill.md
docs/analysis/: multistage_fail_notes.md
docs/decisions/: 001-initial-design-contract.md  003-approximation-first-ground-truth.md  004-handcalc-as-oracle.md  005-yaml-numeric-loading-gotcha.md  006-reasoning-dag-architecture.md  007-level2-composable-stages.md  008-multistage-physical-connectivity.md
scripts/: generate_batch.py  package_dataset.py
src/packager/: pipeline.py  serializer.py
src/solver/: dag_executor.py  rules.py  spice_runner.py  template_generator.py  templates.py
src/topology/: compositor.py  generator.py  models.py  random_compositor.py  stage_library.py  stage_spec.py
src/utils/: model_params.py  netlist_writer.py
synthetic_amp_pipeline/: .gitignore
synthetic_amp_pipeline/docs/: CLAUDE.md  design_notes.md  template.md
tests/: conftest.py  golden_helpers.py  test_batch.py  test_end_to_end_case1.py  test_generator.py  test_generator_multi.py  test_level2_e2e.py  test_models.py  test_netlist_writer.py  test_reasoning_dag.py  test_reasoning_dag_cascode.py  test_reasoning_dag_cg.py  test_reasoning_dag_cs_ics.py  test_reasoning_dag_sf.py  test_serializer.py  test_spice_runner.py
tests/golden/: golden_cs_ideal_current_source_load.yaml  (+2 more)
(+3 files in other folders)
